--- a/css/app.css
+++ b/css/app.css
@@ -89,6 +89,11 @@ header.documentation-header, main, footer {
 .section-spacing-2{
     padding: 15px 0 30px 0;
 }
+.slogan{
+    font-family: 'Lato', sans-serif !important;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
 
 .nav-wrapper li a:hover{
     background: #fff !important;
@@ -149,6 +154,11 @@ header.documentation-header, main, footer {
     }
     .home-code{
         font-size: 1.5rem;
+     }
+
+     .slogan{
+       
+        font-size: 2.5rem;
      }
 
     
