--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,9 @@
 html, body{
     overflow-x: hidden;
+    font-family: 'Montserrat', sans-serif;
+}
+main{
+    margin-bottom: 30px;
 }
 
 header.documentation-header, main, footer {
@@ -9,6 +13,7 @@ header.documentation-header, main, footer {
     margin: 10px 0 0 10px;
     width:50px;
 } */
+
 .center-flex{
     display: flex;
     justify-content:center;
@@ -42,7 +47,13 @@ header.documentation-header, main, footer {
 .section-child{
     font-size: 1rem !important;
     color: #7f8c8d ;
-    margin: 2px;
+    /* margin: 2px; */
+}
+.collapsible-header{
+    padding-left:0 !important;
+}
+.collapsible-header:hover{
+   background-color: #fff !important;
 }
 .section-child:hover{
     border-bottom: deeppink 2px solid;
@@ -61,6 +72,9 @@ header.documentation-header, main, footer {
     color:rgb(237, 47, 89);
     font-weight: 600;
 }
+.done{
+    color: rgb(237, 47, 89);
+}
 .code{
     width:100%;
     margin:0 auto;
@@ -69,34 +83,37 @@ header.documentation-header, main, footer {
    font-size: 1rem;
 }
 .stable-img{
-
     width:100%;
 }
 .max-width{
-    width:120px;
+    width:110px;
 }
-hr-style {
-    max-width:20px !important;
-    color:#fff;
+.hr-style {
+    margin:0 auto;
+    width:20px;
+    height: 2px;
+    background: rgb(237, 47, 89);
 }
 .small{
     width:100px;
     height:100px;
 }
-.rounded{
-    border-radius: 15px;
+.showcase-img{
+   width: 150px;
+}
+.codefii{
+    margin-top: -25px;
 }
 .section-spacing{
     padding: 60px 0 60px 0;
-    margin-top:50px;
 }
 .section-spacing-2{
     padding: 15px 0 30px 0;
 }
 .slogan{
-    font-family: 'Lato', sans-serif !important;
+    font-family: 'Thasadith', sans-serif !important;
     font-size: 1.5rem;
-    font-weight: bold;
+    font-weight: bolder;
 }
 
 .nav-wrapper li a:hover{
@@ -114,7 +131,11 @@ hr-style {
 }
 .showcase-area{
     padding:20px 0 0 0;
-    min-height: 50vh;
+    margin-bottom: 50px;
+
+}
+.btn{
+    border-radius: 5000px;
 }
 
  .size {
@@ -158,7 +179,8 @@ hr-style {
   }
     
 .card-panel{
-    background: rgba(237, 47, 89, 0.5) !important;
+    background: rgba(237, 47, 89, 0.7) !important;
+    border-left: rgb(237, 47, 89) 5px solid;
 }
 
 @media (min-width:770px){
